--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -19,8 +19,7 @@
         <label for="password" class="sr-only mt-3" style="text-align: left; display: block;">Senha</label>
         <input type="password" class="form-control input-login" placeholder="******" required name="password">
         <div class="d-flex justify-content-center">
-          <button class="btn btn-lg btn-dark mt-5" style="margin-right: 20px" type="submit">Acessar</button>
-<!--          <button class="btn btn-lg btn-light mt-5" type="submit">Cadastre-se</button>-->
+          <button class="btn btn-lg btn-dark mt-5" type="submit">Acessar</button>
         </div>
       </form>
     </div>
