--- a/src/main/resources/templates/enrollments/list.html
+++ b/src/main/resources/templates/enrollments/list.html
@@ -11,7 +11,7 @@
                         <h1 class="me-2" th:if="${nDaysAfter} != null" th:text="${nDaysAfter}"></h1>
                         <h1 th:if="${nDaysAfter} != null">dias</h1>
                     </div>
-                    <div sec:authorize="hasRole('ADMIN')" class="col-md-3 ml-auto d-flex justify-content-end align-items-center">
+                    <div class="col-md-3 ml-auto d-flex justify-content-end align-items-center">
                         <form th:action="@{/enrollments/form}" method="GET">
                             <button class="btn btn-dark" type="submit">Nova declaração</button>
                         </form>
