--- a/src/main/resources/templates/enrollments/list.html
+++ b/src/main/resources/templates/enrollments/list.html
@@ -38,7 +38,8 @@
                                 <th>Período</th>
                                 <th>Estudante</th>
                                 <th>Instituição</th>
-                                <th colspan="3"></th>
+                                <th>Download</th>
+                                <th colspan="2"></th>
                             </tr>
                             </thead>
                             <tbody>
@@ -48,11 +49,11 @@
                                 <td th:text="${enrollmentStatus.semester.description}"></td>
                                 <td th:text="${enrollmentStatus.student.name}"></td>
                                 <td th:text="${enrollmentStatus.semester.institution.name}"></td>
+                                <td>
+                                    <a th:if="${enrollmentStatus.document != null}" th:href="@{${enrollmentStatus.document.url}}">Baixar arquivo</a>
+                                </td>
                                 <td style="width: 1px"><a class="border-0 bg-transparent" th:href="@{/enrollments/{id}/edit(id=${enrollmentStatus.id})}"><i class="bi bi-pencil-fill" style="color:#212529"></i></a></td>
                                 <td><a th:href="@{/enrollments/{id}/delete(id=${enrollmentStatus.id})}"><i class="bi bi-trash-fill" style="color:#dc3545"></i></a></td>
-                                <td th:if="${enrollmentStatus.document != null}">
-                                    <a th:href="@{${enrollmentStatus.document.url}}">Baixar arquivo</a>
-                                </td>
                             </tr>
                             </tbody>
                         </table>
